--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,7 +2,7 @@
 
 client_id = "68b327ae97a3b05646394669c6002db9"
 name = "NovaPoshtaRemake"
-application_url = "http://localhost:3000/"
+application_url = "https://corner-template-actions-gave.trycloudflare.com"
 embedded = true
 handle = "novaposhtaremake"
 
@@ -12,16 +12,23 @@ automatically_update_urls_on_dev = true
 [webhooks]
 api_version = "2026-01"
 
-  # [[webhooks.subscriptions]]
-  # topics = [ "app/uninstalled" ]
-  # uri = "/webhooks/app/uninstalled"
+  [[webhooks.subscriptions]]
+  topics = [ "app/uninstalled" ]
+  uri = "/webhooks/app/uninstalled"
 
-  # [[webhooks.subscriptions]]
-  # topics = [ "app/scopes_update" ]
-  # uri = "/webhooks/app/scopes_update"
+  [[webhooks.subscriptions]]
+  topics = [ "app/scopes_update" ]
+  uri = "/webhooks/app/scopes_update"
+
+  [[webhooks.subscriptions]]
+  topics = ["orders/create", "order_transactions/create", "orders/paid"]
+  uri = "arn:aws:events:eu-central-1::event-source/aws.partner/shopify.com/274059100161/np_test_event_bridge"
+
+[access_scopes]
+scopes = "read_orders"
 
 [auth]
-redirect_urls = [ "http://localhost:3000/api/auth" ]
+redirect_urls = ["https://corner-template-actions-gave.trycloudflare.com/api/auth"]
 
 [pos]
 embedded = false
