--- a/shopify.app.nova-poshta-remake.toml
+++ b/shopify.app.nova-poshta-remake.toml
@@ -1,13 +1,13 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "68b327ae97a3b05646394669c6002db9"
-name = "NovaPoshtaRemake"
-application_url = "https://corner-template-actions-gave.trycloudflare.com"
+client_id = "1cb04093e24f00648eb851b0dd03d497"
+name = "nova-poshta-remake"
+application_url = "https://example.com"
 embedded = true
-handle = "novaposhtaremake"
 
 [build]
 automatically_update_urls_on_dev = true
+include_config_on_deploy = true
 
 [webhooks]
 api_version = "2026-01"
@@ -22,13 +22,11 @@ api_version = "2026-01"
 
   [[webhooks.subscriptions]]
   topics = ["orders/create", "order_transactions/create", "orders/paid"]
-  uri = "arn:aws:events:eu-central-1::event-source/aws.partner/shopify.com/274059100161/np_test_event_bridge"
+  uri = "arn:aws:events:eu-central-1::event-source/aws.partner/shopify.com/305982341121/np_test_event_bridge"
 
 [access_scopes]
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "read_orders, write_orders, read_products, write_products, read_inventory, write_inventory read_fulfillments, write_fulfillments, read_customers"
 
 [auth]
-redirect_urls = ["https://corner-template-actions-gave.trycloudflare.com/api/auth"]
-
-[pos]
-embedded = false
+redirect_urls = [ "https://example.com/api/auth" ]
