--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,19 @@
 .cache
 build
 node_modules
+.git
+.gitignore
+.env
+.env.local
+.env.*.local
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+coverage
+.vscode
+.idea
+*.swp
+*.swo
+*~
