--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,11 @@ node_modules
 /app/public/build
 /prisma/dev.sqlite
 /prisma/dev.sqlite-journal
+/prisma/migrations
 database.sqlite
 
 .env
 .env.*
-
 
 
 
