--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -33,7 +33,7 @@ topics = ["orders/create", "order_transactions/create", "orders/paid"]
 uri = "arn:aws:events:eu-central-1::event-source/aws.partner/shopify.com/274059100161/np_test_event_bridge"
 
 [access_scopes]
-scopes = "read_orders, write_orders, read_products, write_products, read_inventory, write_inventory read_fulfillments, write_fulfillments, read_customers"
+scopes = "read_orders, write_orders, read_products, write_products, read_inventory, write_inventory read_fulfillments, write_fulfillments, read_customers, read_shipping"
 
 [auth]
 redirect_urls = [
